[gd_scene load_steps=6 format=3 uid="uid://ckl1w8k0bmo8p"]

[ext_resource type="Script" path="res://old_junk/first_prototype/scripts/waiting_room.gd" id="1_smlrp"]

[sub_resource type="LabelSettings" id="LabelSettings_ugcf2"]
font_size = 20
font_color = Color(0.729085, 0.762673, 0.843136, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r5qtf"]
font_color = Color(0.766756, 0.79181, 0.857145, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcwav"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0988189, 0.117751, 0.165103, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.081839, 0.0994041, 0.141566, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsg0j"]
bg_color = Color(0.0980392, 0.117647, 0.164706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784946, 0.0956364, 0.136784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="WaitingRoom" type="Control"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_smlrp")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.121569, 0.145098, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1386, 0.15895, 0.22, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Waiting Room"
label_settings = SubResource("LabelSettings_ugcf2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayersCounter" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "   Players count: 0"
label_settings = SubResource("LabelSettings_r5qtf")
vertical_alignment = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LogLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/default_color = Color(0.151667, 0.65, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wcwav")
text = "< - - - - -  LOG - - - - - >"

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.78896, 0.809317, 0.858497, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_qsg0j")
text = "Back
"

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.78896, 0.809317, 0.858497, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_qsg0j")
text = "Start Game"

[connection signal="button_down" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_down"]
